--- a/index.html
+++ b/index.html
@@ -199,78 +199,33 @@
     </div>
   </section>
 
-  <!-- Nuestra Fundadora -->
-  <section id="fundadora" class="fundadora section-offwhite section-paws" data-aos="fade-up">
+  <!-- Liderazgo / Fundadora y Gerente -->
+  <section id="fundadora" class="fundadora section-offwhite" data-aos="fade-up">
     <div class="container fundadora-inner">
-      <!-- Pilares — versión refinada para desktop (tarjetas profesionales) -->
-      <div class="fundadora-text pilares-inline" aria-labelledby="pilares-heading">
-        <h3 id="pilares-heading" class="pilares-title">Nuestros Pilares</h3>
-        <p class="pilares-lead">Evimar Malavé y Coralia Goyo aportan liderazgo científico y operativo: no realizan atención clínica directa, sino que <strong>guían y respaldan</strong> a nuestro equipo médico profesional para garantizar protocolos, seguridad y altos estándares de cuidado.</p>
-
-        <div class="pilares-grid refined-pilares" role="list" aria-label="Los pilares de SafePet">
-          <article class="pilar pilar--card" role="listitem" data-aos="fade-up" data-aos-delay="80">
-            <div class="pilar-media" aria-hidden="true">
-              <div class="pilar-icon">
-                <!-- Clinica / Estetica SVG -->
-                <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M12 2v7" stroke="var(--turquoise)" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><rect x="4" y="9" width="16" height="11" rx="2" stroke="var(--turquoise)" stroke-width="1.6"/></svg>
-              </div>
-            </div>
-            <div class="pilar-body">
-              <h4>Excelencia Clínica</h4>
-              <p>Protocolos modernos, equipamiento actualizado y supervisión veterinaria continua para la mejor atención.</p>
-            </div>
-          </article>
-
-          <article class="pilar pilar--card" role="listitem" data-aos="fade-up" data-aos-delay="140">
-            <div class="pilar-media" aria-hidden="true">
-              <div class="pilar-icon">
-                <!-- Heart / Care SVG -->
-                <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M12 20s-6-4.35-8.2-6.2C1.8 11.7 4 8 7 8c1.8 0 2.5 1.2 5 4.2 2.5-3 3.2-4.2 5-4.2 3 0 5.2 3.7 3.2 5.8C18 15.65 12 20 12 20z" stroke="var(--turquoise)" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-              </div>
-            </div>
-            <div class="pilar-body">
-              <h4>Cariño Personalizado</h4>
-              <p>Atención cálida y personalizada, adaptada a la personalidad y necesidades de cada mascota.</p>
-            </div>
-          </article>
-
-          <article class="pilar pilar--card" role="listitem" data-aos="fade-up" data-aos-delay="200">
-            <div class="pilar-media" aria-hidden="true">
-              <div class="pilar-icon">
-                <!-- Shield / Commitment SVG -->
-                <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M12 2l7 4v4c0 5-3.5 9-7 10-3.5-1-7-5-7-10V6l7-4z" stroke="var(--turquoise)" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/></svg>
-              </div>
-            </div>
-            <div class="pilar-body">
-              <h4>Compromiso Transparente</h4>
-              <p>Comunicación abierta, seguimiento claro y mejora continua en cada servicio que entregamos.</p>
-            </div>
-          </article>
-
-        </div>
+      <div class="fundadora-text" aria-labelledby="liderazgo-heading">
+        <h2 id="liderazgo-heading">Liderazgo — Fundadora y Gerente</h2>
+        <p class="lead fundadora-lead">Compromiso clínico y de gestión orientado a la seguridad y la excelencia en el cuidado. Evimar Malavé (Dirección Científica) y Coralia Goyo (Gerencia de Operaciones) aseguran protocolos médicos actualizados y una operación confiable y humana.</p>
+        <p class="fundadora-bio">Nuestra dirección combina experiencia científica y liderazgo operativo para garantizar procesos seguros, atención de calidad y mejora continua en cada servicio.</p>
       </div>
 
-      <div class="fundadora-media">
-        <figure class="team-ceo" data-fullname="" data-title="" data-bio="Evimar Malavé aporta liderazgo científico y dirección estratégica a SafePet; no realiza atenciones clínicas directas, sino que guía al equipo médico profesional para asegurar protocolos y estándares de calidad." data-bullets="Visión|Dirección estratégica" data-aos="fade-up" data-aos-delay="60">
+      <div class="fundadora-media" aria-hidden="false">
+        <figure class="team-ceo" data-aos="fade-up" data-aos-delay="60">
           <div class="figure-badge">
             <img src="imagenes/patitas.png" alt="Patita" class="badge-paw" loading="lazy"/>
             <span class="badge-text">Fundadora</span>
           </div>
           <img src="imagenes/fundadora.jpg" srcset="imagenes/fundadora.jpg 1x, imagenes/fundadora@2x.jpg 2x" sizes="(max-width:900px) 220px, 440px" width="220" height="220" loading="lazy" alt="Evimar Malavé — Fundadora SafePet" class="team-ceo-avatar js-open-profile" role="button" tabindex="0" onerror="this.onerror=null;this.src='imagenes/logo.png'">
-          <figcaption class="figure-caption"><strong>Evimar Malavé</strong></figcaption>
+          <figcaption class="figure-caption"><strong>Evimar Malavé</strong><span class="caption-role">Dirección Científica</span></figcaption>
         </figure>
 
-        <figure class="profile-card" data-fullname="" data-title="" data-bio="Coralia coordina la operación y supervisión del equipo; organiza turnos y garantiza la correcta ejecución de protocolos clínicos por parte de nuestros doctores profesionales (no realiza atenciones veterinarias directas)." data-bullets="Coordinación|Supervisión operativa" data-aos="fade-up" data-aos-delay="120">
+        <figure class="profile-card" data-aos="fade-up" data-aos-delay="120">
           <div class="figure-badge">
             <img src="imagenes/patitas.png" alt="Patita" class="badge-paw" loading="lazy"/>
-            <span class="badge-text">Coordinación Operativa</span>
+            <span class="badge-text">Gerente</span>
           </div>
-          <img class="profile-avatar js-open-profile" src="imagenes/coralia.jpg" alt="Coralia Goyo" width="120" height="120" loading="lazy" role="button" tabindex="0" onerror="this.onerror=null;this.src='imagenes/logo.png'">
-          <figcaption class="figure-caption"><strong>Coralia Goyo</strong></figcaption>
+          <img class="profile-avatar js-open-profile" src="imagenes/coralia.jpg" alt="Coralia Goyo — Gerente" width="120" height="120" loading="lazy" role="button" tabindex="0" onerror="this.onerror=null;this.src='imagenes/logo.png'">
+          <figcaption class="figure-caption"><strong>Coralia Goyo</strong><span class="caption-role">Gerencia de Operaciones</span></figcaption>
         </figure>
-      </div>
-      <div class="fundadora-text" aria-hidden="true">
-        <p class="visually-hidden">Biografía completa disponible al abrir la foto.</p>
       </div>
     </div>
   </section>
@@ -317,6 +272,8 @@
             <div class="member-specialties"><strong>Especializado en</strong> Cardiología y Neumonología</div>
           </article>
 
+
+
           <article class="member-card" role="listitem">
             <img class="member-avatar" src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Empleado 4">
             <div class="member-name">Empleado 4</div>
@@ -333,6 +290,58 @@
             <img class="member-avatar" src="https://images.unsplash.com/photo-1544005313-1a1b1c1d?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Empleado 6">
             <div class="member-name">Empleado 6</div>
             <div class="member-role">Farmacia</div>
+          </article>
+
+          <!-- Empleados añadidos -->
+          <article class="member-card" role="listitem" data-fullname="Empleado 7" data-title="Recepción">
+            <img class="member-avatar js-open-profile" src="https://images.unsplash.com/photo-1531123897727-8f129e1688ce?auto=format&fit=crop&w=400&q=80" alt="Empleado 7" width="140" height="140" loading="lazy" role="button" tabindex="0" aria-label="Abrir perfil de Empleado 7">
+            <div class="member-name">Empleado 7 <span class="badge">Recepción</span></div>
+          </article>
+
+          <article class="member-card" role="listitem" data-fullname="Empleado 8" data-title="Auxiliar Veterinario">
+            <img class="member-avatar js-open-profile" src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?auto=format&fit=crop&w=400&q=80" alt="Empleado 8" width="140" height="140" loading="lazy" role="button" tabindex="0" aria-label="Abrir perfil de Empleado 8">
+            <div class="member-name">Empleado 8 <span class="badge">Auxiliar</span></div>
+          </article>
+
+          <article class="member-card" role="listitem" data-fullname="Empleado 9" data-title="Adiestrador">
+            <img class="member-avatar js-open-profile" src="https://images.unsplash.com/photo-1524504388940-7d5f8c5fad8f?auto=format&fit=crop&w=400&q=80" alt="Empleado 9" width="140" height="140" loading="lazy" role="button" tabindex="0" aria-label="Abrir perfil de Empleado 9">
+            <div class="member-name">Empleado 9 <span class="badge">Adiestrador</span></div>
+          </article>
+
+          <article class="member-card" role="listitem" data-fullname="Empleado 10" data-title="Técnico de Laboratorio">
+            <img class="member-avatar js-open-profile" src="https://images.unsplash.com/photo-1545996124-1b8d7f7f5c4b?auto=format&fit=crop&w=400&q=80" alt="Empleado 10" width="140" height="140" loading="lazy" role="button" tabindex="0" aria-label="Abrir perfil de Empleado 10">
+            <div class="member-name">Empleado 10 <span class="badge">Lab</span></div>
+          </article>
+
+          <article class="member-card" role="listitem" data-fullname="Empleado 11" data-title="Auxiliar de Enfermería">
+            <img class="member-avatar js-open-profile" src="https://images.unsplash.com/photo-1544006659-f0b21884ce1d?auto=format&fit=crop&w=400&q=80" alt="Empleado 11" width="140" height="140" loading="lazy" role="button" tabindex="0" aria-label="Abrir perfil de Empleado 11">
+            <div class="member-name">Empleado 11 <span class="badge">Aux. Enfermería</span></div>
+          </article>
+
+          <article class="member-card" role="listitem" data-fullname="Empleado 12" data-title="Atención al Cliente">
+            <img class="member-avatar js-open-profile" src="https://images.unsplash.com/photo-1541599540903-216a46caad40?auto=format&fit=crop&w=400&q=80" alt="Empleado 12" width="140" height="140" loading="lazy" role="button" tabindex="0" aria-label="Abrir perfil de Empleado 12">
+            <div class="member-name">Empleado 12 <span class="badge">Atención</span></div>
+          </article>
+
+          <article class="member-card" role="listitem" data-fullname="Empleado 13" data-title="Peluquero"
+          >
+            <img class="member-avatar js-open-profile" src="https://images.unsplash.com/photo-1552053831-71594a2751f6?auto=format&fit=crop&w=400&q=80" alt="Empleado 13" width="140" height="140" loading="lazy" role="button" tabindex="0" aria-label="Abrir perfil de Empleado 13">
+            <div class="member-name">Empleado 13 <span class="badge">Peluquería</span></div>
+          </article>
+
+          <article class="member-card" role="listitem" data-fullname="Empleado 14" data-title="Aux. de Farmacia">
+            <img class="member-avatar js-open-profile" src="https://images.unsplash.com/photo-1544005317-6e0b5b7a6a5b?auto=format&fit=crop&w=400&q=80" alt="Empleado 14" width="140" height="140" loading="lazy" role="button" tabindex="0" aria-label="Abrir perfil de Empleado 14">
+            <div class="member-name">Empleado 14 <span class="badge">Farmacia</span></div>
+          </article>
+
+          <article class="member-card" role="listitem" data-fullname="Empleado 15" data-title="Reparto">
+            <img class="member-avatar js-open-profile" src="https://images.unsplash.com/photo-1544005318-5b8b1b3e8adb?auto=format&fit=crop&w=400&q=80" alt="Empleado 15" width="140" height="140" loading="lazy" role="button" tabindex="0" aria-label="Abrir perfil de Empleado 15">
+            <div class="member-name">Empleado 15 <span class="badge">Reparto</span></div>
+          </article>
+
+          <article class="member-card" role="listitem" data-fullname="Empleado 16" data-title="Aux. General">
+            <img class="member-avatar js-open-profile" src="https://images.unsplash.com/photo-1544005367-6d3b9d7d1fbb?auto=format&fit=crop&w=400&q=80" alt="Empleado 16" width="140" height="140" loading="lazy" role="button" tabindex="0" aria-label="Abrir perfil de Empleado 16">
+            <div class="member-name">Empleado 16 <span class="badge">Aux. General</span></div>
           </article>
 
         </div>
