--- a/index.html
+++ b/index.html
@@ -453,90 +453,88 @@
       <h2>Instagram Live — @safepet2021</h2>
       <!-- Instagram feed removed (no API token available) — use el botón de Instagram en "Nuestras redes" para abrir el perfil -->
 
-      <div id="instagram-embed" class="instagram-embed" aria-live="polite" role="region">
-        <div class="embed-placeholder">
-          <p class="insta-note">¿Quieres ver nuestras redes? Contáctanos por cualquiera de ellas.</p>
-          <div class="embed-actions">
-            <button class="btn btn-small" id="btnRedes" aria-expanded="false" aria-controls="redesPanel">Nuestras redes</button>
-          </div>
-
-          <div id="redesPanel" class="redes-panel hidden" aria-hidden="true" style="margin-top:.6rem">
-            <a class="btn btn-small btn-instagram" id="linkInstagram" href="https://www.instagram.com/safepet2021/" target="_blank" rel="noopener noreferrer" aria-label="Abrir Instagram — SafePet">
-              <img class="icon-img" src="imagenes/instagram.png" alt="Instagram logo" loading="lazy" width="20" height="20">
-              <span>Instagram</span>
-            </a>
-
-            <a class="btn btn-small btn-whatsapp" id="linkWhatsApp" href="https://wa.me/584129983853" target="_blank" rel="noopener noreferrer" aria-label="Enviar WhatsApp — SafePet">
-              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path fill="currentColor" d="M20.5 3.5A11.9 11.9 0 0012 0C5.373 0 .001 5.373 0 12c0 2.11.55 4.145 1.6 5.95L0 24l6.3-1.6A11.96 11.96 0 0012 24c6.627 0 12-5.373 12-12 0-1.9-.44-3.7-1.5-5.3zM12 21.4c-1.2 0-2.35-.3-3.38-.88l-.24-.14-3.73.95.96-3.63-.15-.24A8.4 8.4 0 013.6 12 8.4 8.4 0 0112 3.6 8.4 8.4 0 0120.4 12 8.4 8.4 0 0112 21.4zM17.6 14.6c-.3-.15-1.84-.9-2.12-1-.28-.1-.48-.15-.68.15-.2.3-.78 1-.96 1.2-.18.2-.36.22-.68.07-.32-.15-1.36-.5-2.6-1.6-.96-.85-1.6-1.9-1.78-2.22-.18-.3-.02-.46.13-.61.13-.13.28-.36.42-.54.14-.18.18-.3.28-.5.1-.2.04-.38-.02-.53-.07-.15-.68-1.63-.93-2.23-.24-.58-.48-.5-.68-.5h-.58c-.2 0-.53.07-.8.35-.27.27-1.04 1.02-1.04 2.48 0 1.45 1.06 2.86 1.2 3.06.14.2 2.06 3.26 5 4.56 2.94 1.3 2.94.87 3.47.82.53-.05 1.79-.73 2.04-1.44.25-.72.25-1.34.18-1.44-.07-.12-.26-.18-.56-.33z"/></svg>
-              <span>WhatsApp</span>
-            </a>
-
-            <a class="btn btn-small btn-tiktok" id="linkTiktok" href="https://www.tiktok.com/@safepet2021" target="_blank" rel="noopener noreferrer" aria-label="Abrir TikTok — SafePet">
-              <img class="icon-img" src="imagenes/tiktok.png" alt="TikTok logo" loading="lazy" width="20" height="20">
-              <span>TikTok</span>
-            </a>
-          </div>
-
-          <p class="small">Si necesitas ayuda, solicita integración desde el panel de contacto.</p>
-        </div>
-      </div>
-
-      <div class="testimonials">
-        <div class="testimonial-grid">
-
-          <div class="testimonial-col left">
-            <article class="testimonial-card from-left">
-              <img class="testimonial-avatar" src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" loading="lazy" width="48" height="48" alt="Laura G">
+      <div class="instagram-layout">
+        <div class="instagram-left">
+          <div class="testimonials-grid-3x2">
+            <article class="testimonial-card">
               <div class="testimonial-body">
                 <p class="quote">"Gracias a <strong>SafePet</strong>, Bruno volvió a casa sano y feliz. ¡Servicio impecable!"</p>
                 <div class="meta"><strong>Laura G.</strong><span class="stars">★★★★★</span></div>
               </div>
+              <img class="testimonial-avatar" src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" loading="lazy" width="48" height="48" alt="Laura G">
             </article>
 
-            <article class="testimonial-card from-left">
-              <img class="testimonial-avatar" src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" loading="lazy" width="48" height="48" alt="Ana S">
+            <article class="testimonial-card">
               <div class="testimonial-body">
                 <p class="quote">"El equipo fue muy atento con Lulú y me mantuvieron informado en todo momento."</p>
                 <div class="meta"><strong>Ana S.</strong><span class="stars">★★★★★</span></div>
               </div>
+              <img class="testimonial-avatar" src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" loading="lazy" width="48" height="48" alt="Ana S">
             </article>
 
-            <article class="testimonial-card from-left">
-              <img class="testimonial-avatar" src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" loading="lazy" width="48" height="48" alt="Carlos P">
+            <article class="testimonial-card">
               <div class="testimonial-body">
                 <p class="quote">"Profesionales y cariño con las mascotas, me gustó mucho la atención recibida."</p>
                 <div class="meta"><strong>Carlos P.</strong><span class="stars">★★★★★</span></div>
               </div>
+              <img class="testimonial-avatar" src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" loading="lazy" width="48" height="48" alt="Carlos P">
             </article>
-          </div>
 
-          <div class="testimonial-center" aria-hidden="true"></div>
-
-          <div class="testimonial-col right">
-            <article class="testimonial-card from-right">
-              <img class="testimonial-avatar" src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" loading="lazy" width="48" height="48" alt="Miguel R">
+            <article class="testimonial-card">
               <div class="testimonial-body">
                 <p class="quote">"Atención 24/7 y una comunicación que me tranquiliza siempre. Confío plenamente en el equipo."</p>
                 <div class="meta"><strong>Miguel R.</strong><span class="stars">★★★★★</span></div>
               </div>
+              <img class="testimonial-avatar" src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" loading="lazy" width="48" height="48" alt="Miguel R">
             </article>
 
-            <article class="testimonial-card from-right">
-              <img class="testimonial-avatar" src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" loading="lazy" width="48" height="48" alt="Sofia M">
+            <article class="testimonial-card">
               <div class="testimonial-body">
                 <p class="quote">"Muy satisfechos con el servicio de peluquería y la limpieza del lugar."</p>
                 <div class="meta"><strong>Sofía M.</strong><span class="stars">★★★★★</span></div>
               </div>
+              <img class="testimonial-avatar" src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" loading="lazy" width="48" height="48" alt="Sofia M">
             </article>
 
-            <article class="testimonial-card from-right">
-              <img class="testimonial-avatar" src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" loading="lazy" width="48" height="48" alt="Diego L">
+            <article class="testimonial-card">
               <div class="testimonial-body">
                 <p class="quote">"Siempre vuelvo por la confianza que me genera el equipo y el cariño con mi mascota."</p>
                 <div class="meta"><strong>Diego L.</strong><span class="stars">★★★★★</span></div>
               </div>
+              <img class="testimonial-avatar" src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" loading="lazy" width="48" height="48" alt="Diego L">
             </article>
           </div>
+        </div>
+
+        <aside class="instagram-right">
+          <div id="instagram-embed" class="instagram-embed" aria-live="polite" role="region">
+            <div class="embed-placeholder">
+              <p class="insta-note">¿Quieres ver nuestras redes? Contáctanos por cualquiera de ellas.</p>
+              <div class="embed-actions">
+                <button class="btn btn-small" id="btnRedes" aria-expanded="false" aria-controls="redesPanel">Nuestras redes</button>
+              </div>
+
+              <div id="redesPanel" class="redes-panel hidden" aria-hidden="true" style="margin-top:.6rem">
+                <a class="btn btn-small btn-instagram" id="linkInstagram" href="https://www.instagram.com/safepet2021/" target="_blank" rel="noopener noreferrer" aria-label="Abrir Instagram — SafePet">
+                  <img class="icon-img" src="imagenes/instagram.png" alt="Instagram logo" loading="lazy" width="20" height="20">
+                  <span>Instagram</span>
+                </a>
+
+                <a class="btn btn-small btn-whatsapp" id="linkWhatsApp" href="https://wa.me/584129983853" target="_blank" rel="noopener noreferrer" aria-label="Enviar WhatsApp — SafePet">
+                  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path fill="currentColor" d="M20.5 3.5A11.9 11.9 0 0012 0C5.373 0 .001 5.373 0 12c0 2.11.55 4.145 1.6 5.95L0 24l6.3-1.6A11.96 11.96 0 0012 24c6.627 0 12-5.373 12-12 0-1.9-.44-3.7-1.5-5.3zM12 21.4c-1.2 0-2.35-.3-3.38-.88l-.24-.14-3.73.95.96-3.63-.15-.24A8.4 8.4 0 013.6 12 8.4 8.4 0 0112 3.6 8.4 8.4 0 0120.4 12 8.4 8.4 0 0112 21.4zM17.6 14.6c-.3-.15-1.84-.9-2.12-1-.28-.1-.48-.15-.68.15-.2.3-.78 1-.96 1.2-.18.2-.36.22-.68.07-.32-.15-1.36-.5-2.6-1.6-.96-.85-1.6-1.9-1.78-2.22-.18-.3-.02-.46.13-.61.13-.13.28-.36.42-.54.14-.18.18-.3.28-.5.1-.2.04-.38-.02-.53-.07-.15-.68-1.63-.93-2.23-.24-.58-.48-.5-.68-.5h-.58c-.2 0-.53.07-.8.35-.27.27-1.04 1.02-1.04 2.48 0 1.45 1.06 2.86 1.2 3.06.14.2 2.06 3.26 5 4.56 2.94 1.3 2.94.87 3.47.82.53-.05 1.79-.73 2.04-1.44.25-.72.25-1.34.18-1.44-.07-.12-.26-.18-.56-.33z"/></svg>
+                  <span>WhatsApp</span>
+                </a>
+
+                <a class="btn btn-small btn-tiktok" id="linkTiktok" href="https://www.tiktok.com/@safepet2021" target="_blank" rel="noopener noreferrer" aria-label="Abrir TikTok — SafePet">
+                  <img class="icon-img" src="imagenes/tiktok.png" alt="TikTok logo" loading="lazy" width="20" height="20">
+                  <span>TikTok</span>
+                </a>
+              </div>
+
+              <p class="small">Si necesitas ayuda, solicita integración desde el panel de contacto.</p>
+            </div>
+          </div>
+        </aside>
 
         </div>
       </div>
