--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container header-inner">
-      <a href="#hero" class="brand" aria-label="SafePet Home">
-        <img src="imagenes/logo.png" alt="SafePet Logo" class="logo">
-      </a>
+      <!-- Brand logo removed per request -->
 
       <!-- Mobile-only: quick login button (left of hamburger) -->
       <a href="login.html" id="mobileLoginBtn" class="btn btn-primary mobile-login-btn" aria-label="Iniciar sesión">Iniciar Sesión</a>
@@ -177,17 +175,23 @@
       <div class="instalaciones-grid">
 
         <article class="instalacion-card" aria-labelledby="inst-1">
-          <div class="placeholder" role="img" aria-hidden="true"><span class="placeholder-number">1</span></div>
+          <div class="placeholder" role="img" aria-hidden="true">
+            <img src="imagenes/Recepcion.jpeg" alt="Recepción" class="instalacion-img" loading="lazy">
+          </div>
           <h3 id="inst-1">Recepción</h3>
         </article>
 
         <article class="instalacion-card" aria-labelledby="inst-2">
-          <div class="placeholder" role="img" aria-hidden="true"><span class="placeholder-number">2</span></div>
-          <h3 id="inst-2">Sala de Consulta</h3>
+          <div class="placeholder" role="img" aria-hidden="true">
+            <img src="imagenes/Saladeespera.jpeg" alt="Sala de Espera" class="instalacion-img" loading="lazy">
+          </div>
+          <h3 id="inst-2">Sala de Espera</h3>
         </article>
 
         <article class="instalacion-card" aria-labelledby="inst-3">
-          <div class="placeholder" role="img" aria-hidden="true"><span class="placeholder-number">3</span></div>
+          <div class="placeholder" role="img" aria-hidden="true">
+            <img src="imagenes/Quirofano.jpeg" alt="Quirófano" class="instalacion-img" loading="lazy">
+          </div>
           <h3 id="inst-3">Quirófano</h3>
         </article>
 
@@ -204,12 +208,16 @@
         </article>
 
         <article class="instalacion-card" aria-labelledby="inst-5">
-            <div class="placeholder" role="img" aria-hidden="true"><span class="placeholder-number">5</span></div>
+            <div class="placeholder" role="img" aria-hidden="true">
+              <img src="imagenes/Peluqueria.png" alt="Peluquería" class="instalacion-img" loading="lazy">
+            </div>
             <h3 id="inst-5">Peluquería</h3>
         </article>
 
         <article class="instalacion-card" aria-labelledby="inst-6">
-            <div class="placeholder" role="img" aria-hidden="true"><span class="placeholder-number">6</span></div>
+            <div class="placeholder" role="img" aria-hidden="true">
+              <img src="imagenes/Hospitalizacion.jpeg" alt="Hospitalización" class="instalacion-img" loading="lazy">
+            </div>
             <h3 id="inst-6">Hospitalización</h3>
         </article>
 
